tests/ui/compile-fail/init/invalid_init.stderr
error[E0277]: the trait bound `impl pinned_init::PinInit<Bar>: Init<Bar>` is not satisfied
  --> tests/ui/compile-fail/init/invalid_init.rs:18:13
   |
18 |       let _ = init!(Foo {
   |  _____________^
19 | |         bar <- Bar::new(),
20 | |     });
   | |______^ the trait `Init<Bar>` is not implemented for `impl pinned_init::PinInit<Bar>`
   |
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
